etc/openshift/spring-petclinic.yaml
################################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza             #
#      SPDX-License-Identifier:  GPL-2.0-only                                  #
################################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: spring-petclinic
spec:
  selector:
    matchLabels:
      app: spring-petclinic
  template: 
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers: 
      -
        image: academiaonline/spring-petclinic:latest
        imagePullPolicy: Always
        name: spring-petclinic
        ports:
        -
          containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 1G
          requests:
            cpu: 500m
            memory: 1G          
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spring-petclinic
spec:
  ingress:
  -
    ports:
    -
      port: 8080
  podSelector:
    matchLabels:
      app: spring-petclinic
---
apiVersion: v1
kind: Service
metadata: 
  name: spring-petclinic
spec:
  ports:
  -
    port: 80
    targetPort: 8080
  selector:
    app: spring-petclinic
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-petclinic-route
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: spring-petclinic-svc
---
